Fix panel content overflow

--- a/src/app/modules/shared/components/groups/groups.component.scss
+++ b/src/app/modules/shared/components/groups/groups.component.scss
@@ -49,27 +49,31 @@ app-groups {
       }
     }
 
-    .mat-expansion-panel .controls {
-      position: absolute;
-      margin-top: 0;
-      right: 0;
-
-      visibility: hidden;
-      opacity: 0;
-      transition: opacity 1s linear;
-    }
-
     .mat-expansion-panel.mat-expanded {
       @include mat-elevation(8);
-
-      margin-top: 4rem;
-      overflow: visible;
-
-      .controls {
-        margin-top: -7rem;
-        visibility: visible;
-        opacity: 1;
-      }
+      margin-top: 0;
     }
+  }
+
+  .panel-controls {
+    display: none;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1rem 0;
+
+    &.visible {
+      display: flex;
+    }
+
+    .timestamp {
+      margin-left: 0.5rem;
+    }
+  }
+}
+
+@include theme using($theme) {
+  app-groups .panel-controls {
+    color: mat-color(getForeground($theme), disabled-text);
   }
 }
